fixed flex styling to wrap form element instead of main

--- a/src/App.css
+++ b/src/App.css
@@ -94,18 +94,15 @@ body {
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   background: url('/img/organic-veg.svg') #c6e2b2;
   background-size: cover;
 }
 
 main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex: 1 0 auto;
-  height: 100vh;
-  width: 100vw;
 }
 
 footer {
@@ -565,6 +562,10 @@ p.line-text:before {
 }
 
 .wrapper {
-  width: 50%;
-  align-items: center;
+  display: flex;
+  flex-flow: column wrap;
+  margin: 0 auto;
+  min-height: 95vh;
+  max-width: 600px;
+  justify-content: center;
 }
